@@ -28,8 +28,13 @@
 
 #import <Foundation/Foundation.h>
 
-#import "WebTypesInternal.h"
 #import <WebKit/WebDocumentPrivate.h>
+
+#if MAC_OS_X_VERSION_MAX_ALLOWED <= MAC_OS_X_VERSION_10_4
+#define WebNSUInteger unsigned int
+#else
+#define WebNSUInteger NSUInteger
+#endif
 
 @class WebHTMLRepresentationPrivate;
 @class NSView;
@@ -61,11 +66,12 @@
 - (DOMElement *)formForElement:(DOMElement *)element;
 - (DOMElement *)currentForm;
 - (NSArray *)controlsInForm:(DOMElement *)form;
-- (NSString *)searchForLabels:(NSArray *)labels beforeElement:(DOMElement *)element resultDistance:(NSUInteger*)outDistance resultIsInCellAbove:(BOOL*)outIsInCellAbove;
+- (NSString *)searchForLabels:(NSArray *)labels beforeElement:(DOMElement *)element resultDistance:(WebNSUInteger*)outDistance resultIsInCellAbove:(BOOL*)outIsInCellAbove;
 - (NSString *)matchLabels:(NSArray *)labels againstElement:(DOMElement *)element;
 
 // Deprecated SPI
 - (NSString *)searchForLabels:(NSArray *)labels beforeElement:(DOMElement *)element; // Use -searchForLabels:beforeElement:resultDistance:resultIsInCellAbove:
 
-
 @end
+
+#undef WebNSUInteger
