@@ -1,3 +1,9 @@
+2010-01-19  Dan Bernstein  <mitz@apple.com>
+
+        Redo DumpRenderTree build fix without making WebTypesInternal.h a private header
+
+        * WebKit.xcodeproj/project.pbxproj:
+
 2010-01-19  Simon Fraser  <simon.fraser@apple.com>
 
         Build fix, no review.
